--- a/clusters/my-cluster/blog.yaml
+++ b/clusters/my-cluster/blog.yaml
@@ -1,35 +1,31 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: blog-deploy
+  namespace: default
+spec:
+    replicas: 1
+    selector:
+        matchLabels:
+        app: blog
+    template:
+        metadata:
+        labels:
+            app: blog
+        spec:
+          - name: blog
+            containers:
+            image: ghcr.io/mharikmert/blog:v0.0.11
+---
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
-  name: blog
+  name: blog-svc
   namespace: default
 spec:
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
-  selector:
-    run: blog
-status:
-  loadBalancer: {}
----
----
-apiVersion: v1
-kind: Pod
-metadata:
-  creationTimestamp: null
-  labels:
-    run: blog
-  name: blog
-  namespace: default
-spec:
-  containers:
-  - image: ghcr.io/mharikmert/blog:v0.0.11
-    name: blog
+    type: ClusterIP
     ports:
-    - containerPort: 80
-    resources: {}
-  dnsPolicy: ClusterFirst
-  restartPolicy: Always
-status: {}
+    - port: 80
+      targetPort: 80
+    selector:
+        app: blog
