Fix image policy name

--- a/clusters/my-cluster/blog/blog.yaml
+++ b/clusters/my-cluster/blog/blog.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: blog
-          image: ghcr.io/mharikmert/blog:v0.0.15 # {"$imagepolicy": "flux-system:blog-image-repository"}
+          image: ghcr.io/mharikmert/blog:v0.0.15 # {"$imagepolicy": "flux-system:blog-image-policy"}
 ---
 apiVersion: v1
 kind: Service
